# templateCloud

./: README.rst  requirements.txt  setup.cfg
devstack/: plugin.sh  settings  templateCloud.service
templatecloud/: start.py
