[metadata]
name = templatecloud
summary = aaa
description_file = README.rst
license = Apache Software License
python_requires = >=3.8
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    Framework :: Setuptools Plugin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = ddevin96
author_email = ddevinco@unisa.it
home_page = https://google.com

[files]
packages =
    templatecloud